--- a/views/templates/home.html
+++ b/views/templates/home.html
@@ -1,27 +1,29 @@
 {% extends "layout.html" %}
 {% block title %} Home Page {% endblock %}
 
-{% block body %}
-
-<div class="container">
+<body>
+    {% block body %} 
     {{super()}}
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@report">
-        Report an Accident
-    </button>  
-    <button type="button" class="btn btn-danger float-right">
-        <span class="badge badge-light">20</span> Reported Today
-    </button>
-    <div id="mapCanvas">
-        
-    </div>
-</div> 
-{% endblock %}
+    <div class="container padding">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@report">
+            Report an Accident
+        </button>  
+        <button type="button" class="btn btn-danger float-right">
+            <span class="badge badge-light">20</span> Reported Today
+        </button>
+        <div id="mapCanvas">
+            
+        </div>
+    </div> 
+    {% endblock %}
+
+</body>
 {% block scripts %}
   {{super()}}
   <script>
-      window.onload = function(){
-        //console.log(pickCoordinates()) 
-        //loadHeatMap()
-      }  
+  window.onload = function(){
+    //console.log(pickCoordinates()) 
+    //loadHeatMap()
+  }   
   </script>
 {% endblock %}
