redirecting button to homepage

--- a/views/templates/404.html
+++ b/views/templates/404.html
@@ -9,7 +9,7 @@
             <p class="lead">Requested Resource Not Found</p>
             <hr class="my-4">
             <p>The resource you are trying to access does not exist here</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Get Me Out of Here</a>
+            <a class="btn btn-primary btn-lg" href="/" role="button">Get Me Out of Here</a>
           </div>
 </div> 
 {% endblock %}
