--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -15,15 +15,18 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/about">About</a>
 				</li>
+				<li class="nav-item">
+						<a class="nav-link" href="/feeds">Feeds</a>
+					</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Reports
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Boda Boda Accidents</a>
+						<a class="dropdown-item" href="#">Vehicle Accidents</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
+						<a class="dropdown-item" href="#"></a>
 					</div>
 				</li>
 			</ul>
