[#163520577] Added some sample data

--- a/views/templates/feeds.html
+++ b/views/templates/feeds.html
@@ -11,8 +11,39 @@
         <button type="button" class="btn btn-danger float-right">
             <span class="badge badge-light">20</span> Reported Today
         </button> 
-        <div id="feeds">
-            
+        <div class="feeds">
+            <div class="card-deck">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Lorry Crashes a Taxi</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Bus Knocks 10 Bodas</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 8 mins ago</small>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Boda hits 2 Boys</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 6 mins ago</small>
+                    </div>
+                </div>
+            </div>
         </div>
     </div> 
     {% endblock %}
