[#163525540] Added signup page to the nav page & modal to the layout

--- a/views/templates/layout.html
+++ b/views/templates/layout.html
@@ -37,6 +37,7 @@
             <div class="container">
                 {% include 'includes/__create_accident_modal.html' %}
                 {% include 'includes/__login_modal.html' %}
+                {% include 'includes/__signup_modal.html' %}
             </div>
         {% endblock %}
 </body>
