--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 		<a class="navbar-brand" href="#">
-				<img src="https://getbootstrap.com/docs/4.2/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="Accident">
+				<img src="https://image.flaticon.com/icons/png/128/65/65788.png" width="30" height="32" alt="Accident">
 				Accidents
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,9 +33,12 @@
 
 			<ul class="navbar-nav">
 				<li class="nav-item">
-						<a class="nav-link" href="#" data-toggle="modal" data-target="#logalModal">Login</a>
-					</li>
-					<li class="nav-item dropdown">
+					<a class="nav-link" href="#" data-toggle="modal" data-target="#logalModal">Login</a>
+				</li>
+				<li class="nav-item">
+						<a class="nav-link" href="#" data-toggle="modal" data-target="#signupModal">Create Account</a>
+				</li>
+				<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							Profile
 						</a>
@@ -45,12 +48,12 @@
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#">Logout</a>
 						</div>
-					</li>
-				<ul>
-				<form class="form-inline my-2 my-lg-0">
+				</li>
+			<ul>
+			<form class="form-inline my-2 my-lg-0">
 						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				</form>
+			</form>
 		</div>
 </nav>
 <br />
