[#163499311] Added check valid status on fields

--- a/views/templates/includes/__login_modal.html
+++ b/views/templates/includes/__login_modal.html
@@ -11,11 +11,11 @@
             <form>
                 <div class="form-group">
                 <label for="username-name" class="col-form-label">Username :</label>
-                <input type="text" class="form-control" id="username-name">
+                <input type="text" class="form-control is-valid" id="username-name">
                 </div>
                 <div class="form-group">
                 <label for="password-name" class="col-form-label">password:</label>
-                <input type="password" class="form-control" id="password-name"></textarea>
+                <input type="password" class="form-control is-invalid" id="password-name"></textarea>
                 </div>
             </form>
             </div>
