--- a/views/templates/includes/__create_accident_modal.html
+++ b/views/templates/includes/__create_accident_modal.html
@@ -11,25 +11,54 @@
             <form>
                 <div class="form-group">
                     <label for="accident-title" class="col-form-label">Title:</label>
-                    <input type="text" class="form-control" id="accident-title">
+                    <input type="text" class="form-control form-control-sm" id="accident-title">
                 </div>
                 <div class="form-group">
                     <label for="accident-desc" class="col-form-label">Description:</label>
-                    <textarea class="form-control" id="accident-desc"></textarea>
+                    <textarea class="form-control form-control-sm" id="accident-desc"></textarea>
                 </div>
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="accident-photos" accept="image/*" multiple required>
+                    <label class="custom-file-label" for="accident-photos">Attach Photos...</label>
+                    <div class="invalid-feedback">You must Attach atleast one photo</div>
+                    <div class="photo-display">
+
+                    </div>
+                  </div>
                 <div class="form-group">
-                    <label for="accident-address" class="col-form-label">Address:</label>
-                    <input type="text" class="form-control" id="accident-address">
+                    <label for="accident-address" class="sr-only">Address:</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control form-control-sm" id="accident-address" placeholder="Address">
+                        <div class="col-auto">
+                          <button type="button" class="btn btn-default mb-2">Pick HERE</button>
+                        </div>
+                      </div>
                 </div>
+                <Reported>Reported by</Reported>
                 <hr />
-                <div class="form-group">
-                    <label for="accident-by-email" class="col-form-label">Your Email:</label>
-                    <input type="email" class="form-control" id="accident-by-email">
-                </div>
-                <div class="form-group">
-                        <label for="accident-by-phone" class="col-form-label">Your Phone:</label>
-                        <input type="tel" class="form-control" id="accident-by-phone">
-                </div>
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                      <label for="accident-by-name">Name</label>
+                      <input type="text" class="form-control is-invalid" id="accident-by-name" placeholder="First name"  required>
+                      <div class="valid-feedback">
+                        Looks good!
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <label for="accident-by-phone">Telephone</label>
+                      <input type="tel" class="form-control is-invalid" id="accident-by-phone" placeholder="256772000123"  required>
+                      <div class="valid-feedback">
+                        Looks good!
+                      </div>
+                    </div>
+                    <div class="col-md mb-3">
+                        <label for="accident-by-victim">Victim of Accident</label>
+                        <div class="custom-control  custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="accident-by-victim">
+                            <label class="custom-control-label" for="accident-by-victim">Yes</label>
+                        </div>
+                    </div>
+                  </div>
             </form>
             </div>
             <div class="modal-footer">
