--- a/views/static/css/layout.css
+++ b/views/static/css/layout.css
@@ -1,6 +1,7 @@
 #mapCanvas {
     width: 100%;
     height: 500px;
+    height:10vh;
     position: relative;
     padding-top: 56.25%; /* 16:9 Aspect Ratio */
     background-color: black;
@@ -13,4 +14,19 @@
 
 .feeds{
     padding: 15px 0;
+}
+.photo-display{
+    width: 100%;
+    height: 60px;
+    display: inline-table;
+    margin: 1px 0;
+    padding: 1px;
+    background-color: beige;
+}
+reported{
+    color:#007bff;
+}
+
+.modal-body hr{
+    margin-top:0;
 }
