--- a/views/templates/layout.html
+++ b/views/templates/layout.html
@@ -15,6 +15,7 @@
     {{super()}}
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7g68KcjjZ3nGcT0Jcjo6nWPXfITNVStA&libraries=visualization" type="text/javascript"></script>
     <script src="{{url_for('.static', filename='js/map.js')}}"></script>
+    <script src="{{url_for('.static', filename='js/util.js')}}"></script>
     <!-- script src="https://code.highcharts.com/highcharts.src.js"></script -->
     <script>
       $('#exampleModal').on('show.bs.modal', function (event) {
