[#163503424] Added css to style photo display upon upload

--- a/views/static/css/layout.css
+++ b/views/static/css/layout.css
@@ -17,12 +17,33 @@
 }
 .photo-display{
     width: 100%;
-    height: 60px;
-    display: inline-table;
-    margin: 1px 0;
+    height: 55px;
+    display: none;
+    margin: 2px 0;
     padding: 1px;
     background-color: beige;
 }
+.photo-display .close-me{
+    position: absolute;
+    color: red;
+    cursor: pointer;
+    top: 34px;
+    right: 4px;
+    width: 10px;
+    height: 10px;
+}
+
+.photo-display img#accident_image{
+    float:left;
+    width:50px;
+    padding:1px 3px;
+    height: 50px; 
+}
+
+.custom-file {
+    margin-bottom: 15px !important;
+}
+
 reported{
     color:#007bff;
 }
