--- a/views/templates/includes/__signup_modal.html
+++ b/views/templates/includes/__signup_modal.html
@@ -13,25 +13,30 @@
                     <form>
                         <div class="form-group">
                             <label for="user-fullname">Full Name</label>
-                            <input type="text" class="form-control" id="user-fullname" placeholder="FirstName LastName">
+                            <input type="text" class="form-control" id="user-fullname" 
+                            pattern="[A-Za-z]{3,15},[A-Za-z]{3,15}" placeholder="FirstName LastName">
                         </div>
                         <div class="form-group">
                             <label for="user-email">Email</label>
-                            <input type="text" class="form-control" id="user-email" placeholder="Email Address">
+                            <input type="text" class="form-control" id="user-email" 
+                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Email Address">
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="user-pass">Password</label>
-                                <input type="email" class="form-control" id="user-pass" placeholder="Password">
+                                <input type="password" class="form-control" id="user-pass" 
+                                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Password">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="user-pass-confirm">Confirm Password</label>
-                                <input type="password" class="form-control" id="user-pass-confirm" placeholder="Password">
+                                <input type="password" class="form-control" id="user-pass-confirm" 
+                                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Password">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="user-phonenumber">Phone Number</label>
-                            <input type="tel" class="form-control" id="user-phonenumber" placeholder="256 781 000233">
+                            <input type="tel" class="form-control" id="user-phonenumber" 
+                                pattern="2567[0-9]{8}" placeholder="256 781 000233">
                         </div>
                     
                 </div>
