--- a/views/templates/includes/__create_accident_modal.html
+++ b/views/templates/includes/__create_accident_modal.html
@@ -11,7 +11,7 @@
             <form>
                 <div class="form-group">
                     <label for="accident-title" class="col-form-label">Title:</label>
-                    <input type="text" class="form-control form-control-sm" id="accident-title">
+                    <input type="text" class="form-control form-control-sm" id="accident-title" required>
                 </div>
                 <div class="form-group">
                     <label for="accident-desc" class="col-form-label">Description:</label>
@@ -43,16 +43,14 @@
                 <div class="form-row">
                     <div class="col-md-4 mb-3">
                       <label for="accident-by-name">Name</label>
-                      <input type="text" class="form-control is-invalid" id="accident-by-name" placeholder="First name"  
-                        pattern="[A-Za-z]{3,15}" maxlength="15" required>
+                      <input type="text" class="form-control" id="accident-by-name" placeholder="First name" maxlength="15" required>
                       <div class="valid-feedback">
                         Looks good!
                       </div>
                     </div>
                     <div class="col-md-4 mb-3">
                       <label for="accident-by-phone">Telephone</label>
-                      <input type="tel" class="form-control is-invalid" id="accident-by-phone" placeholder="256772000123"  
-                        pattern="2567[0-9]{8}" maxlength="12" required>
+                      <input type="text" class="form-control" id="accident-by-phone" placeholder="256772000123" maxlength="12">
                       <div class="valid-feedback">
                         Looks good!
                       </div>
@@ -65,12 +63,20 @@
                         </div>
                     </div>
                   </div>
-            </form>
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-primary">Submit Accident</button>
             </div>
+        </form>
         </div>
         </div>
     </div> 
+
+    <script>
+        bootstrapValidate(['#accident-title','#accident-desc'], 'min:10:Enter at least 10 characters!')
+        bootstrapValidate('#accident-photos','required:You must atleast select one accident photo')
+        bootstrapValidate('#accident-by-phone','regex:^2567[0-9]{8}:Format should be 2567________|numeric:Only number acceptable!') 
+        bootstrapValidate(["#accident-by-victim"],'required')
+        bootstrapValidate('#accident-by-name','regex:^[A-Za-z]{3,15}|alpha:Only Letters are acceptable')
+    </script> 
