--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -44,7 +44,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="#">Account Settings</a>
-							<a class="dropdown-item" href="#">My Report</a>
+							<a class="dropdown-item" href="/dashboard">Dashboard</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#">Logout</a>
 						</div>
