[#163670089] Adding the accident's info statistics holders

--- a/views/templates/dashboard.html
+++ b/views/templates/dashboard.html
@@ -5,7 +5,87 @@
     {% block body %} 
     {{super()}}
     <div class="container padding">
-
+      <div class="row">
+        <div class="col-3">
+          <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Dashboard</a>
+            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Reported</a> 
+            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+          </div>
+        </div>
+        <div class="col-9">
+          <div class="tab-content" id="v-pills-tabContent">
+            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                <nav class="navbar navbar-light bg-light">
+                    <span class="navbar-text">
+                      My Dashboard
+                    </span>
+                </nav>
+                <br>
+                <div class="card-deck">
+                    <div class="card text-white bg-success mb-3" style="max-width: 16rem;">
+                        <div class="card-body text-center">
+                          <h1 class="display-1">14</h1>
+                          <p class="card-text">Minor Accidents.</p>
+                        </div>
+                        <div class="card-footer"></div>
+                    </div>
+                    <div class="card text-white bg-warning mb-3" style="max-width: 16rem;">
+                        <div class="card-body text-center"> 
+                          <h1 class="display-1 ">54</h1>
+                          <p class="card-text">Serious Accidents</p>
+                        </div>
+                        <div class="card-footer"></div>
+                    </div>
+                    <div class="card text-white bg-danger mb-3" style="max-width: 16rem;">
+                        <div class="card-body text-center">
+                          <h1 class="display-1">04</h1>
+                          <p class="card-text">Fatal Accidents</p>
+                        </div>
+                        <div class="card-footer"></div>
+                    </div>
+                </div>
+                <div class="card-deck">
+                  <div class="card text-white bg-success mb-3" style="max-width: 16rem;">
+                    <ul class="list-group list-group-flush text-muted">
+                      <li class="list-group-item">12 Pedestrians</li>
+                      <li class="list-group-item">5 Boda Boda</li>
+                      <li class="list-group-item">0 Vehicles</li>
+                    </ul>
+                  </div>
+                  <div class="card text-white bg-warning mb-3" style="max-width: 16rem;">
+                    <ul class="list-group list-group-flush text-muted">
+                      <li class="list-group-item">10 Pedestrians</li>
+                      <li class="list-group-item">15 Boda Boda</li>
+                      <li class="list-group-item">1 Vehicles</li>
+                    </ul>
+                  </div>
+                  <div class="card text-white bg-danger mb-3" style="max-width: 16rem;">
+                    <ul class="list-group list-group-flush text-muted">
+                      <li class="list-group-item">10 Pedestrians</li>
+                      <li class="list-group-item">5 Boda Boda</li>
+                      <li class="list-group-item">10 Vehicles</li>
+                    </ul>
+                  </div>
+              </div>              
+            </div>
+            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                <nav class="navbar navbar-light bg-light">
+                    <span class="navbar-text">
+                      My Reported Accidents
+                    </span>
+                </nav>
+            </div> 
+            <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
+                <nav class="navbar navbar-light bg-light">
+                    <span class="navbar-text">
+                      My Profile Settings
+                    </span>
+                </nav>
+            </div>
+          </div>
+        </div>
+      </div>
     </div> 
     {% endblock %}
 
@@ -13,9 +93,6 @@
 {% block scripts %}
   {{super()}}
   <script>
-  window.onload = function(){
-    //console.log(pickCoordinates()) 
-    //loadHeatMap()
-  }   
+      //
   </script>
 {% endblock %}
