--- a/views/templates/dashboard.html
+++ b/views/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %} Home Page {% endblock %}
-
+<link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.css">
 <body>
     {% block body %} 
     {{super()}}
@@ -73,8 +73,12 @@
                 <nav class="navbar navbar-light bg-light">
                     <span class="navbar-text">
                       My Reported Accidents
-                    </span>
+                    </span>             
                 </nav>
+                <br>
+                <table data-toggle="table">
+
+                </table>   
             </div> 
             <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
                 <nav class="navbar navbar-light bg-light">
@@ -92,7 +96,36 @@
 </body>
 {% block scripts %}
   {{super()}}
+  <script src="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.js"></script>
   <script>
-      //
+    datta = [{
+      id:0,
+      name:"steve",
+      price:4550
+    }];
+    $('#table').bootstrapTable({
+      //url: 'data1.json',
+      pagination: true,
+      search: true,
+      columns: [{
+        field: 'id',
+        title: 'Item ID'
+      }, {
+        field: 'name',
+        title: 'Item Name'
+      }, {
+        field: 'price',
+        title: 'Item Price'
+      }, ],
+      data: [{
+        id: 1,
+        name: 'Item 1',
+        price: '$1'
+      }, {
+        id: 2,
+        name: 'Item 2',
+        price: '$2'
+      }]
+    })
   </script>
 {% endblock %}
