--- a/views/templates/includes/__login_modal.html
+++ b/views/templates/includes/__login_modal.html
@@ -11,11 +11,11 @@
             <form>
                 <div class="form-group">
                 <label for="username-name" class="col-form-label">Username :</label>
-                <input type="text" class="form-control" id="username-name" required>
+                <input type="text" class="form-control" id="username-name" required autocomplete>
                 </div>
                 <div class="form-group">
                 <label for="username-pass" class="col-form-label">password:</label>
-                <input type="password" class="form-control" id="username-pass" required>
+                <input type="password" class="form-control" id="username-pass" required autocomplete>
                 </div>
             </div>
             <div class="modal-footer">
