--- a/views/templates/layout.html
+++ b/views/templates/layout.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block styles %}
         <link rel="stylesheet" href="{{url_for('.static', filename='css/layout.css')}}"> 
+        <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.css">
         {{super()}}
     {% endblock %} 
     {% block scripts %}
