[#163503424] Added bootstrap-table css & js

--- a/views/templates/layout.html
+++ b/views/templates/layout.html
@@ -15,6 +15,7 @@
     {{super()}}
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7g68KcjjZ3nGcT0Jcjo6nWPXfITNVStA&libraries=visualization" type="text/javascript"></script>
     <script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.1.3/dist/bootstrap-validate.js" ></script>
+    <script src="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.js"></script>
     <script src="{{url_for('.static', filename='js/map.js')}}"></script>
     <script src="{{url_for('.static', filename='js/util.js')}}"></script>
     <!-- script src="https://code.highcharts.com/highcharts.src.js"></script -->
